# gentoogram-bot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  settings.default.toml  settings.default.yml  settings.yml  setup.cfg
.github/: renovate.json
.github/workflows/: gentoogram-bot.yml  lint.yml
docker/: .env.example  compose.yaml  docker-compose.dev.yml
docker/entrypoint.d/: 10-config.sh  20-fix-perms.sh
docker/healthcheck.d/: 10-api-status.sh
docker/rootfs/: docker-entrypoint.sh  docker-healthcheck.sh
docker/rootfs/etc/cont-init.d/: 10-config  20-fix-perms
docker/rootfs/etc/services.d/app/: run
gentoogram/: __init__.py  __main__.py  bot.py  config.py  decorators.py  meta.py  paths.py  version.py
gentoogram/resources/config/: default.toml  settings.toml  settings.yml
