[project]
name = "gentoogram-bot"
description = ""
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "0.9.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "sentry-sdk (>=2.8.0,<3.0.0)",
    "dynaconf[yaml] (>=3.2.4,<4.0.0)",
    "python-telegram-bot[webhooks] (>=21.0.1,<22.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.0.0,<5.0.0)",
    "pre-commit-hooks (>=5.0.0,<6.0.0)",
    "ruff (>=0.9.0,<1.0.0)",
    "shellcheck-py (>=0.10.0.1)",
]

[tool.ruff]
force-exclude = true

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

extend-ignore = ["PLR09"]

[tool.ruff.format]
line-ending = "lf"
