[project]
name = "gentoogram-bot"
description = "Anti-spam bot for https://t.me/Gentoogram"
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "0.9.4"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "dynaconf[yaml]>=3.2.10",
    "python-telegram-bot[webhooks]>=22.0",
    "sentry-sdk>=2.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.7",
    "shellcheck-py>=0.10.0.1",
]

[tool.ruff]
force-exclude = true
extend-exclude = ["docker/data/", "docker/config/"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

extend-ignore = ["PLR09"]

[tool.ruff.format]
line-ending = "lf"
